--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,9 @@
         "guzzlehttp/guzzle": "~6.0",
         "emmelaineglz/orchextra-client-php": "dev-master",
         "illuminate/database": "^5.4",
-        "illuminate/support": "^5.4"
+        "illuminate/support": "^5.4",
+        "guzzlehttp/psr7": "^1.4",
+        "guzzlehttp/promises": "^1.3"
     },
     "autoload": {
         "psr-4": {
